third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/garbage_attribute.rs
#[derive(num_enum::TryFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero = 0,
    #[num_enum(garbage)]
    One = 1,
    Two = 2,
}

fn main() {

}
