third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/garbage_attribute.stderr
error: Invalid attribute: expected one of: `default`, `catch_all`, `alternatives`
 --> $DIR/garbage_attribute.rs:5:5
  |
5 |     #[num_enum(garbage)]
  |     ^^^^^^^^^^^^^^^^^^^^
